feat: update habit model + update habit fetch query params
