# core/models.py
@@ -1,9 +1,19 @@
 from django.db import models
 from django.contrib.auth.models import User
 from django.core.validators import MinValueValidator, MaxValueValidator
+from graphene import Enum
+
+
+class HabitStatus(Enum):
+    ACTIVE = '0'
+    PAUSED = '1'
+    DELETED = '2'
 
 
 class Habit(models.Model):
+    class Meta:
+        ordering = ["private", "status", "goalFrom", "goalTimespan"]
+
     GOAL_TYPE_CHOICES = [
         ("gt", "Greater than"),
         ("gte", "Greater than or equal to"),
@@ -13,9 +23,9 @@ class Habit(models.Model):
     ]
 
     STATUS_CHOICES = [
-        ("active", "Active"),
-        ("paused", "Paused"),
-        ("deleted", "Deleted"),
+        (HabitStatus.ACTIVE.value, "Active"),
+        (HabitStatus.PAUSED.value, "Paused"),
+        (HabitStatus.DELETED.value, "Deleted"),
     ]
 
     author = models.ForeignKey(User, on_delete=models.CASCADE, related_name="habits")
@@ -23,9 +33,15 @@ class Habit(models.Model):
     description = models.TextField(blank=True, null=True)
     private = models.BooleanField(default=False)
     status = models.CharField(max_length=10, default="active", choices=STATUS_CHOICES)
-    goalFrequency = models.IntegerField()
-    goalTimespan = models.IntegerField(validators=[MinValueValidator(0)])
-    goalType = models.CharField(max_length=10, choices=GOAL_TYPE_CHOICES)
+    goal = models.IntegerField(blank=True, null=True)
+    goalType = models.CharField(
+        max_length=10, choices=GOAL_TYPE_CHOICES, blank=True, null=True
+    )
+    goalTimespan = models.IntegerField(
+        validators=[MinValueValidator(0)], blank=True, null=True
+    )
+    goalFrom = models.DateTimeField(blank=True, null=True)
+    goalTo = models.DateTimeField(blank=True, null=True)
 
     def __str__(self):
         return self.name
@@ -33,7 +49,7 @@ class Habit(models.Model):
 
 class Entry(models.Model):
     habit = models.ForeignKey(Habit, on_delete=models.CASCADE, related_name="entries")
-    date = models.DateTimeField(auto_now_add=True)
+    date = models.DateTimeField()
     rating = models.IntegerField(
         blank=True,
         null=True,
