# core/schema.py
@@ -1,6 +1,10 @@
+from datetime import datetime
 import graphene
+from django.db.models import Q
 from graphene_django import DjangoObjectType
-from .models import Habit, Entry
+
+from core.utils import days_ago
+from .models import Habit, Entry, HabitStatus
 
 
 class EntryType(DjangoObjectType):
@@ -19,25 +23,46 @@ class HabitType(DjangoObjectType):
             "description",
             "private",
             "status",
-            "goalFrequency",
-            "goalTimespan",
+            "goal",
             "goalType",
+            "goalTimespan",
+            "goalFrom",
+            "goalTo",
         )
 
     entries = graphene.List(EntryType, span=graphene.Int(required=False))
 
-    def resolve_entries(self: Habit, info, span=None):
-        if not span or span <= 0:
-            span = self.goalTimespan if self.goalTimespan > 0 else 7
-
-        return Entry.objects.filter(habit=self).order_by("-date")[:span]
+    def resolve_entries(self: Habit, info, days=10):
+        return (
+            Entry.objects.filter(habit=self)
+            .filter(date__gt=days_ago(days))
+            .order_by("-date")
+        )
 
 
 class Query(graphene.ObjectType):
     habits = graphene.List(HabitType, author=graphene.Int(required=True))
 
     def resolve_habits(self, info, author):
-        return Habit.objects.filter(author=author)
+        """
+        Gets habits of selected user, that are active and currently ongoing (goal range
+        is not set outside of today). If the requesting user is not the same as author,
+        private habits are not returned.
+        """
+        now = datetime.now()
+        userId: str = info.context.user.id
+
+        habits = (
+            Habit.objects.filter(author=author)
+            .filter(status=HabitStatus.ACTIVE.value)
+            .filter(Q(goalFrom__isnull=True) | Q(goalFrom__lte=now))
+            .filter(Q(goalTo__isnull=True) | Q(goalTo__gte=now))
+        )
+
+        if userId != author:
+            habits = habits.filter(private=False)
+
+        return habits
 
 
 schema = graphene.Schema(query=Query)
